// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AudioProgress /> should render component with default state 1`] = `
<div>
  <div
    class="mfui-audio-progress"
  >
    <div
      class="mfui-audio-progress__info"
    >
      <span
        class="mfui-audio-progress__title"
      >
        test audioTitle
      </span>
      <span
        class="mfui-audio-progress__value"
      >
        01:40
      </span>
    </div>
    <div
      class="mfui-audio-progress__range-wrapper"
    >
      <input
        class="mfui-audio-range mfui-audio-progress__range"
        data-testid="AudioTimeRange"
        max="100"
        min="0"
        step="1"
        style="background-size: 0% 100%;"
        type="range"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`<AudioProgress /> should render with playing state 1`] = `
<div>
  <div
    class="mfui-audio-progress"
  >
    <div
      class="mfui-audio-progress__info"
    >
      <span
        class="mfui-audio-progress__title"
      >
        test audioTitle
      </span>
      <span
        class="mfui-audio-progress__value"
      >
        00:10
      </span>
    </div>
    <div
      class="mfui-audio-progress__range-wrapper"
    >
      <input
        class="mfui-audio-range mfui-audio-progress__range"
        data-testid="AudioTimeRange"
        max="100"
        min="0"
        step="1"
        style="background-size: 10% 100%;"
        type="range"
        value="10"
      />
    </div>
  </div>
</div>
`;
